--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-./pointers/build/*
-!./pointers/build/.gitkeep
-./pointers/build/CMakeCache.txt
+# Ignorer tout dans build sauf .gitkeep
+pointers/build/*
+!pointers/build/.gitkeep
